--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.jackson.serialization.write-dates-as-timestamps=false
 server.port=8085
+spring.messages.basename=messages
+management.endpoints.web.exposure.include=*
