after h2 db retrieve app post data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,18 @@ spring.jackson.serialization.write-dates-as-timestamps=false
 server.port=8085
 spring.messages.basename=messages
 management.endpoints.web.exposure.include=*
+#for basic authentication
+spring.security.user.name=np
+spring.security.user.password=np
+
+#for h2 database
+#spring.datasource.url=jdbc:h2:mem:testdb
+
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+#spring.datasource.initialize=true
+
+# use http://localhost:8085/h2-console for log h2 db and set url as below
+spring.datasource.url=jdbc:h2:mem:testdb;
+#this should use when h2 database
+#spring.jpa.hibernate.ddl-auto=none
